blackbox-log/tests/snapshots/snapshots__own.snap
---
source: blackbox-log/tests/snapshots.rs
expression: logs
input_file: blackbox-log/tests/logs/error-recovery.bbl
---
[
  Ok(LogSnapshot(
    headers: Headers(
      version: V2,
      firmware_revision: "Betaflight 4.2.11 (948ba6339) STM32F7X2",
      firmware_kind: Betaflight,
      board_info: Some("ZEEZ ZEEZF7V2"),
      craft_name: None,
      vbat_reference: Some(2466),
      acceleration_1g: Some(2048),
      gyro_scale: Some(0.017453292),
      min_throttle: Some(1070),
      motor_output_range: Some(MotorOutputRange(
        min: 158,
        max: 2047,
      )),
      unknown: {
        "dyn_notch_width_percent": "0",
        "rc_smoothing_active_cutoffs": "68, 90",
        "acc_hardware": "0",
        "deadband": "0",
        "tpa_rate": "65",
        "rc_smoothing_cutoffs": "0, 0",
        "gyro_lowpass2_type": "0",
        "rate_limits": "1998,1998,1998",
        "dterm_notch_cutoff": "0",
        "pid_process_denom": "1",
        "gyro_cal_on_first_arm": "0",
        "yaw_lowpass_hz": "0",
        "acc_limit_yaw": "0",
        "dyn_notch_max_hz": "350",
        "yaw_deadband": "0",
        "mag_hardware": "0",
        "maxthrottle": "2000",
        "vbat_pid_gain": "0",
        "I interval": "256",
        "dterm_lowpass_dyn_hz": "70,170",
        "use_integrated_yaw": "0",
        "dshot_bidir": "1",
        "ff_boost": "15",
        "gyro_sync_denom": "1",
        "rpm_notch_lpf": "150",
        "rc_smoothing_filter_type": "1, 1",
        "serialrx_provider": "9",
        "dshot_idle_value": "550",
        "features": "809829384",
        "feedforward_weight": "97,103,97",
        "d_min_advance": "20",
        "rc_smoothing_debug_axis": "0",
        "gyro_rpm_notch_q": "500",
        "rc_interpolation_channels": "2",
        "dterm_filter2_type": "0",
        "ff_interpolate_sp": "2",
        "gyro_lowpass_type": "0",
        "Log start datetime": "0000-01-01T00:00:00.000+00:00",
        "dterm_filter_type": "0",
        "vbatcellvoltage": "330,350,430",
        "anti_gravity_mode": "0",
        "rc_interpolation_interval": "19",
        "rc_smoothing_type": "1",
        "iterm_relax": "1",
        "gyro_rpm_notch_harmonics": "3",
        "rc_interpolation": "2",
        "tpa_breakpoint": "1350",
        "d_min_gain": "37",
        "dterm_lowpass_hz": "150",
        "rates": "75,75,75",
        "iterm_relax_cutoff": "15",
        "d_min": "0,0,0",
        "acc_limit": "0",
        "ff_spike_limit": "60",
        "ff_max_rate_limit": "100",
        "gyro_lowpass_hz": "200",
        "gyro_notch_hz": "0,0",
        "anti_gravity_threshold": "250",
        "acc_lpf_hz": "1000",
        "baro_hardware": "0",
        "motor_pwm_protocol": "7",
        "rc_rates": "70,70,70",
        "pidAtMinThrottle": "1",
        "pitchPID": "55,108,38",
        "magPID": "40",
        "P interval": "16",
        "pidsum_limit_yaw": "400",
        "pidsum_limit": "500",
        "rates_type": "0",
        "Firmware date": "Nov  9 2021 20:29:32",
        "dyn_notch_min_hz": "120",
        "iterm_relax_type": "1",
        "dterm_rpm_notch_min": "100",
        "gyro_lowpass_dyn_hz": "200,500",
        "motor_pwm_rate": "480",
        "thr_mid": "50",
        "dyn_notch_q": "250",
        "dterm_notch_hz": "0",
        "feedforward_transition": "0",
        "gyro_rpm_notch_min": "100",
        "rollPID": "50,102,36",
        "thr_expo": "0",
        "looptime": "125",
        "yawPID": "54,108,0",
        "levelPID": "50,50,75",
        "rc_expo": "0,0,0",
        "dterm_rpm_notch_harmonics": "0",
        "airmode_activate_throttle": "25",
        "debug_mode": "0",
        "P ratio": "16",
        "anti_gravity_gain": "3500",
        "gyro_hardware_lpf": "0",
        "dterm_lowpass2_hz": "150",
        "use_unsynced_pwm": "0",
        "rc_smoothing_rx_average": "6654",
        "dterm_rpm_notch_q": "500",
        "iterm_windup": "100",
        "abs_control_gain": "0",
        "gyro_notch_cutoff": "0,0",
        "rc_smoothing_auto_factor": "10",
        "gyro_lowpass2_hz": "0",
      },
    ),
    stats: Stats(
      counts: FrameCounts(
        main: 2,
        slow: 1,
        gps: 0,
        gps_home: 0,
      ),
    ),
    events: [
      SyncBeep(32887122),
      Disarm(4),
      End,
    ],
    main: Fields([
      FieldSnapshot(
        name: "loopIteration",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 256,
          unique: 2,
          histogram: (2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "time",
        unit: FrameTime,
        history: FieldSnapshot(
          min: 0,
          max: 33043646,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1),
        ),
      ),
      FieldSnapshot(
        name: "axisP[0]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "axisP[1]",
        unit: Unitless,
        history: FieldSnapshot(
          min: -2,
          max: 0,
          unique: 2,
          histogram: (1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "axisP[2]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "axisI[0]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "axisI[1]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "axisI[2]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "axisD[0]",
        unit: Unitless,
        history: FieldSnapshot(
          min: -1,
          max: 0,
          unique: 2,
          histogram: (1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "axisD[1]",
        unit: Unitless,
        history: FieldSnapshot(
          min: -3,
          max: 0,
          unique: 2,
          histogram: (1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "axisF[0]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "axisF[1]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "axisF[2]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "rcCommand[0]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "rcCommand[1]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "rcCommand[2]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 1,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "rcCommand[3]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 1000,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "setpoint[0]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "setpoint[1]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "setpoint[2]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "setpoint[3]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "vbatLatest",
        unit: Voltage,
        history: FieldSnapshot(
          min: 0,
          max: 24630,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0),
        ),
      ),
      FieldSnapshot(
        name: "amperageLatest",
        unit: Amperage,
        history: FieldSnapshot(
          min: 0,
          max: 760,
          unique: 2,
          histogram: (1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "BaroAlt",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 279,
          unique: 2,
          histogram: (0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "rssi",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 774,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "gyroADC[0]",
        unit: Rotation,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "gyroADC[1]",
        unit: Rotation,
        history: FieldSnapshot(
          min: 0,
          max: 1,
          unique: 2,
          histogram: (1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "gyroADC[2]",
        unit: Rotation,
        history: FieldSnapshot(
          min: 0,
          max: 0,
          unique: 1,
        ),
      ),
      FieldSnapshot(
        name: "accSmooth[0]",
        unit: Acceleration,
        history: FieldSnapshot(
          min: -21,
          max: 0,
          unique: 2,
          histogram: (0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "accSmooth[1]",
        unit: Acceleration,
        history: FieldSnapshot(
          min: -19,
          max: 0,
          unique: 2,
          histogram: (0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "accSmooth[2]",
        unit: Acceleration,
        history: FieldSnapshot(
          min: 0,
          max: 984,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "motor[0]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 169,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0),
        ),
      ),
      FieldSnapshot(
        name: "motor[1]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 183,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "motor[2]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 161,
          unique: 2,
          histogram: (0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1),
        ),
      ),
      FieldSnapshot(
        name: "motor[3]",
        unit: Unitless,
        history: FieldSnapshot(
          min: 0,
          max: 183,
          unique: 2,
          histogram: (0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0),
        ),
      ),
      FieldSnapshot(
        name: "flightModeFlags",
        unit: FlightMode,
        history: {},
      ),
      FieldSnapshot(
        name: "stateFlags",
        unit: State,
        history: {},
      ),
      FieldSnapshot(
        name: "failsafePhase",
        unit: FailsafePhase,
        history: {},
      ),
      FieldSnapshot(
        name: "rxSignalReceived",
        unit: Boolean,
        history: History(
          yes: 0,
          no: 0,
        ),
      ),
      FieldSnapshot(
        name: "rxFlightChannelsValid",
        unit: Boolean,
        history: History(
          yes: 0,
          no: 0,
        ),
      ),
    ]),
    gps: Fields([]),
  )),
]
