blackbox-log/tests/snapshots/snapshots__snapshot@LOG00002.BFL.snap
---
source: blackbox-log/tests/snapshots.rs
expression: logs
input_file: blackbox-log/tests/logs/LOG00002.BFL
---
[
  Err(Corrupted),
]
