blackbox-log/tests/snapshots/snapshots__snapshot@LOG00007.BFL.snap
---
source: blackbox-log/tests/snapshots.rs
expression: logs
input_file: blackbox-log/tests/logs/LOG00007.BFL
---
[
  Err(Corrupted),
]
