blackbox-log/tests/snapshots/snapshots__snapshot@LOG00037.BFL.snap
---
source: blackbox-log/tests/snapshots.rs
expression: logs
input_file: blackbox-log/tests/logs/LOG00037.BFL
---
[
  Ok(LogSnapshot(
    headers: Headers(
      version: V2,
      firmware_revision: "Betaflight 4.2.0 (8f2d21460) STM32F745",
      firmware_kind: Betaflight,
      board_info: "HBRO KAKUTEF7",
      craft_name: "AR8",
      vbat_reference: 2277,
      vbat_scale: 110,
      current_meter: CurrentMeterConfig(
        offset: 0,
        scale: 275,
      ),
      acceleration_1g: 2048,
      gyro_scale: 1.0,
      min_throttle: 1070,
      motor_output_range: MotorOutputRange(158, 2047),
    ),
    events: [
      SyncBeep(451840837),
      Disarm(4),
      End,
    ],
    main: FrameSnapshot(
      fields: [
        FieldSnapshot(
          name: "loopIteration",
          min: 0,
          max: 134149,
          unique: 16774,
          histogram: (1049, 1049, 1049, 1049, 1049, 1049, 1048, 1048, 1048, 1048, 1048, 1048, 1048, 1048, 1048, 1048),
        ),
        FieldSnapshot(
          name: "time",
          min: 0,
          max: 469230773,
          unique: 16774,
          histogram: (1070, 1082, 1113, 945, 1091, 677, 1378, 1050, 1048, 1050, 1119, 951, 1102, 684, 1362, 1052),
        ),
        FieldSnapshot(
          name: "axisP[0]",
          min: -49,
          max: 80,
          unique: 89,
          histogram: (3977, 3227, 2530, 1824, 1341, 960, 672, 541, 367, 292, 243, 241, 192, 184, 117, 66),
        ),
        FieldSnapshot(
          name: "axisP[1]",
          min: -583,
          max: 284,
          unique: 198,
          histogram: (3662, 2960, 2170, 1506, 1171, 918, 826, 697, 614, 532, 421, 398, 316, 223, 181, 179),
        ),
        FieldSnapshot(
          name: "axisP[2]",
          min: -73,
          max: 23,
          unique: 72,
          histogram: (6030, 4391, 2658, 1541, 916, 496, 243, 160, 95, 69, 49, 42, 32, 14, 22, 16),
        ),
        FieldSnapshot(
          name: "axisI[0]",
          min: -50,
          max: 11,
          unique: 62,
          histogram: (1888, 864, 1203, 1858, 1494, 1409, 1772, 1633, 1183, 799, 506, 377, 347, 416, 483, 542),
        ),
        FieldSnapshot(
          name: "axisI[1]",
          min: -251,
          max: 92,
          unique: 195,
          histogram: (1567, 839, 1346, 1352, 1610, 2571, 1943, 1133, 1053, 942, 765, 460, 403, 306, 258, 226),
        ),
        FieldSnapshot(
          name: "axisI[2]",
          min: -61,
          max: 44,
          unique: 101,
          histogram: (2713, 1770, 2205, 1936, 1969, 1962, 1453, 906, 614, 476, 231, 146, 131, 104, 64, 94),
        ),
        FieldSnapshot(
          name: "axisD[0]",
          min: -122,
          max: 192,
          unique: 106,
          histogram: (3422, 3001, 2709, 2042, 1647, 1219, 864, 605, 405, 274, 181, 124, 95, 72, 60, 54),
        ),
        FieldSnapshot(
          name: "axisD[1]",
          min: -893,
          max: 526,
          unique: 140,
          histogram: (3571, 3196, 2698, 2045, 1537, 1019, 742, 592, 384, 265, 225, 163, 137, 85, 69, 46),
        ),
        FieldSnapshot(
          name: "axisF[0]",
          min: -1,
          max: 3,
          unique: 5,
          histogram: (16419, 312, 23, 20, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisF[1]",
          min: -2,
          max: 2,
          unique: 5,
          histogram: (16269, 436, 69, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "axisF[2]",
          min: -7,
          max: 1,
          unique: 9,
          histogram: (16539, 190, 9, 5, 4, 7, 6, 14, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rcCommand[0]",
          min: -85,
          max: 98,
          unique: 184,
          histogram: (7414, 1242, 544, 800, 613, 687, 543, 740, 459, 576, 617, 375, 495, 652, 456, 561),
        ),
        FieldSnapshot(
          name: "rcCommand[1]",
          min: -76,
          max: 111,
          unique: 188,
          histogram: (985, 1079, 802, 6789, 1319, 736, 625, 703, 404, 426, 512, 361, 500, 675, 405, 453),
        ),
        FieldSnapshot(
          name: "rcCommand[2]",
          min: -96,
          max: 78,
          unique: 175,
          histogram: (1443, 4241, 1232, 1963, 1109, 883, 532, 1212, 382, 529, 531, 402, 627, 880, 407, 401),
        ),
        FieldSnapshot(
          name: "rcCommand[3]",
          min: 0,
          max: 1948,
          unique: 754,
          histogram: (950, 850, 794, 582, 880, 1324, 1449, 765, 2428, 798, 642, 1286, 1288, 986, 1004, 748),
        ),
        FieldSnapshot(
          name: "setpoint[0]",
          min: -27,
          max: 31,
          unique: 59,
          histogram: (7432, 1193, 766, 794, 914, 1184, 696, 694, 702, 494, 374, 452, 345, 197, 292, 245),
        ),
        FieldSnapshot(
          name: "setpoint[1]",
          min: -23,
          max: 36,
          unique: 60,
          histogram: (1359, 8165, 935, 851, 907, 857, 890, 535, 486, 322, 264, 225, 225, 218, 313, 222),
        ),
        FieldSnapshot(
          name: "setpoint[2]",
          min: -35,
          max: 28,
          unique: 64,
          histogram: (4666, 3142, 1700, 827, 1018, 856, 562, 972, 673, 351, 248, 497, 393, 253, 283, 333),
        ),
        FieldSnapshot(
          name: "setpoint[3]",
          min: 0,
          max: 965,
          unique: 729,
          histogram: (2417, 759, 774, 1271, 1280, 956, 958, 686, 926, 823, 796, 690, 911, 1293, 1345, 889),
        ),
        FieldSnapshot(
          name: "vbatLatest",
          min: 0,
          max: 2281,
          unique: 140,
          histogram: (849, 989, 983, 1145, 1577, 1266, 1006, 1044, 927, 987, 1067, 989, 1066, 1002, 770, 1107),
        ),
        FieldSnapshot(
          name: "amperageLatest",
          min: 0,
          max: 11978,
          unique: 591,
          histogram: (1838, 666, 1678, 787, 556, 1603, 669, 569, 1617, 692, 1916, 968, 689, 1265, 530, 731),
        ),
        FieldSnapshot(
          name: "magADC[0]",
          min: -740,
          max: 292,
          unique: 117,
          histogram: (1282, 791, 1282, 1677, 984, 786, 1185, 493, 1084, 591, 592, 1480, 1427, 984, 852, 1284),
        ),
        FieldSnapshot(
          name: "magADC[1]",
          min: -66,
          max: 947,
          unique: 126,
          histogram: (1480, 395, 985, 888, 1382, 1775, 393, 982, 1679, 951, 1476, 987, 689, 1184, 639, 889),
        ),
        FieldSnapshot(
          name: "magADC[2]",
          min: 0,
          max: 2576,
          unique: 123,
          histogram: (1187, 1281, 1084, 788, 493, 690, 1084, 1133, 885, 1085, 1149, 1579, 1084, 1182, 788, 1282),
        ),
        FieldSnapshot(
          name: "BaroAlt",
          min: -656,
          max: 289,
          unique: 255,
          histogram: (914, 419, 1376, 979, 1014, 716, 1506, 2241, 690, 1057, 689, 839, 1078, 568, 1652, 1036),
        ),
        FieldSnapshot(
          name: "rssi",
          min: 0,
          max: 1023,
          unique: 1,
        ),
        FieldSnapshot(
          name: "gyroADC[0]",
          min: -30,
          max: 37,
          unique: 68,
          histogram: (3820, 3984, 1450, 956, 904, 827, 664, 694, 672, 574, 486, 512, 415, 386, 236, 194),
        ),
        FieldSnapshot(
          name: "gyroADC[1]",
          min: -120,
          max: 197,
          unique: 136,
          histogram: (3222, 4965, 1926, 1212, 953, 853, 674, 705, 501, 361, 324, 194, 254, 317, 134, 179),
        ),
        FieldSnapshot(
          name: "gyroADC[2]",
          min: -43,
          max: 28,
          unique: 72,
          histogram: (3436, 3829, 1941, 1067, 995, 946, 739, 901, 532, 342, 394, 391, 383, 347, 280, 251),
        ),
        FieldSnapshot(
          name: "accSmooth[0]",
          min: -1496,
          max: 1183,
          unique: 604,
          histogram: (1039, 1172, 1200, 1178, 1133, 1188, 1015, 1077, 1050, 963, 1003, 1008, 981, 939, 926, 902),
        ),
        FieldSnapshot(
          name: "accSmooth[1]",
          min: -864,
          max: 71,
          unique: 380,
          histogram: (986, 983, 1037, 1006, 1014, 1064, 1021, 1051, 1051, 1070, 1049, 1096, 1100, 1106, 1160, 980),
        ),
        FieldSnapshot(
          name: "accSmooth[2]",
          min: 0,
          max: 7547,
          unique: 2435,
          histogram: (968, 1038, 1004, 1020, 1043, 1049, 1085, 1055, 1077, 1102, 1077, 1104, 1016, 1141, 1026, 969),
        ),
        FieldSnapshot(
          name: "debug[0]",
          min: -33,
          max: 45,
          unique: 75,
          histogram: (1936, 3360, 2413, 1737, 1282, 1004, 844, 693, 642, 568, 541, 477, 373, 356, 294, 254),
        ),
        FieldSnapshot(
          name: "debug[1]",
          min: -125,
          max: 214,
          unique: 141,
          histogram: (2061, 3251, 2580, 1998, 1631, 1159, 906, 702, 534, 392, 362, 301, 294, 224, 222, 157),
        ),
        FieldSnapshot(
          name: "debug[2]",
          min: -54,
          max: 33,
          unique: 83,
          histogram: (1684, 2803, 2474, 1983, 1642, 1230, 902, 707, 604, 544, 466, 435, 380, 329, 307, 284),
        ),
        FieldSnapshot(
          name: "debug[3]",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "motor[0]",
          min: 0,
          max: 2047,
          unique: 1172,
          histogram: (1017, 999, 1034, 981, 1050, 1026, 1033, 1022, 1030, 1069, 1075, 1066, 1133, 1045, 1112, 1082),
        ),
        FieldSnapshot(
          name: "motor[1]",
          min: 0,
          max: 2044,
          unique: 1193,
          histogram: (1078, 1056, 985, 1017, 983, 1077, 1030, 1067, 1009, 989, 1020, 1103, 1023, 1192, 1083, 1062),
        ),
        FieldSnapshot(
          name: "motor[2]",
          min: 0,
          max: 1901,
          unique: 1153,
          histogram: (1057, 1042, 1023, 1079, 1035, 1038, 979, 1029, 1048, 1058, 1051, 1037, 1096, 1126, 1069, 1007),
        ),
        FieldSnapshot(
          name: "motor[3]",
          min: 0,
          max: 2052,
          unique: 1190,
          histogram: (1032, 1067, 1018, 1055, 1030, 1063, 997, 1030, 1048, 1040, 1044, 1088, 1201, 1049, 1013, 999),
        ),
      ],
    ),
    slow: FrameSnapshot(
      fields: [
        FieldSnapshot(
          name: "flightModeFlags",
          min: 0,
          max: 524289,
          unique: 2,
          histogram: (1, 16773, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "stateFlags",
          min: 0,
          max: 3,
          unique: 2,
          histogram: (1, 0, 0, 16773, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "failsafePhase",
          min: 0,
          max: 0,
          unique: 1,
        ),
        FieldSnapshot(
          name: "rxSignalReceived",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (1, 16773, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        FieldSnapshot(
          name: "rxFlightChannelsValid",
          min: 0,
          max: 1,
          unique: 2,
          histogram: (1, 16773, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
      ],
    ),
  )),
]
